--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,8 @@
 name: umap
 channels:
+  - anaconda
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -22,8 +24,8 @@ dependencies:
   - bottleneck=1.3.4=py39hce1f21e_0
   - brotli=1.0.9=he6710b0_2
   - brotlipy=0.7.0=py39h27cfd23_1003
-  - ca-certificates=2022.4.26=h06a4308_0
-  - certifi=2022.6.15=py39h06a4308_0
+  - ca-certificates=2023.01.10=h06a4308_0
+  - certifi=2022.12.7=py39h06a4308_0
   - cffi=1.15.0=py39hd667e15_1
   - chardet=4.0.0=py39h06a4308_1003
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
@@ -33,13 +35,17 @@ dependencies:
   - cookiecutter=1.7.3=pyhd3eb1b0_0
   - cryptography=37.0.1=py39h9ce1e76_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - cython=0.29.33=py39h6a678d5_0
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py39h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
+  - deprecated=1.2.13=py39h06a4308_0
   - diff-match-patch=20200713=pyhd3eb1b0_0
+  - dionysus=2.0.8=py39h4173164_1004
   - docutils=0.17.1=py39h06a4308_1
   - entrypoints=0.4=py39h06a4308_0
+  - et_xmlfile=1.1.0=py39h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.4=h295c915_0
   - flake8=3.9.2=pyhd3eb1b0_0
@@ -50,6 +56,8 @@ dependencies:
   - glib=2.69.1=h4ff587b_1
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
+  - hdbscan=0.8.28=py39hce5d2b2_1
+  - hopcroftkarp=1.2.4=py_0
   - icu=58.2=he6710b0_3
   - idna=3.3=pyhd3eb1b0_0
   - imagesize=1.3.0=pyhd3eb1b0_0
@@ -66,6 +74,7 @@ dependencies:
   - jeepney=0.7.1=pyhd3eb1b0_0
   - jinja2=3.0.3=pyhd3eb1b0_0
   - jinja2-time=0.2.0=pyhd3eb1b0_3
+  - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9e=h7f8727e_0
   - jsonschema=4.4.0=py39h06a4308_0
   - jupyter_client=6.1.12=pyhd3eb1b0_0
@@ -113,18 +122,19 @@ dependencies:
   - numpy=1.22.3=py39he7a7128_0
   - numpy-base=1.22.3=py39hf524024_0
   - numpydoc=1.2=pyhd3eb1b0_0
-  - openssl=1.1.1p=h5eee18b_0
+  - openpyxl=3.0.9=pyhd3eb1b0_0
+  - openssl=1.1.1t=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py39h295c915_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pathspec=0.7.0=py_0
   - pcre=8.45=h295c915_0
+  - persim=0.3.1=pyhd8ed1ab_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py39h22f2fdc_0
   - pip=21.2.4=py39h06a4308_0
-  - plotly=5.6.0=pyhd3eb1b0_0
   - pluggy=1.0.0=py39h06a4308_1
   - poyo=0.5.0=pyhd3eb1b0_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
@@ -150,6 +160,7 @@ dependencies:
   - python-lsp-jsonrpc=1.0.0=pyhd3eb1b0_0
   - python-lsp-server=1.2.4=pyhd3eb1b0_0
   - python-slugify=5.0.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
   - pytz=2022.1=py39h06a4308_0
   - pyxdg=0.27=pyhd3eb1b0_0
   - pyyaml=6.0=py39h7f8727e_1
@@ -163,8 +174,10 @@ dependencies:
   - readline=8.1.2=h7f8727e_1
   - regex=2022.3.15=py39h7f8727e_0
   - requests=2.27.1=pyhd3eb1b0_0
+  - ripser=0.6.1=py39h5472131_1
   - rope=0.22.0=pyhd3eb1b0_0
   - rtree=0.9.7=py39h06a4308_1
+  - scikit-learn=1.1.1=py39h6a678d5_0
   - scipy=1.7.3=py39hc147768_0
   - seaborn=0.11.2=pyhd3eb1b0_0
   - secretstorage=3.3.1=py39h06a4308_0
@@ -185,10 +198,10 @@ dependencies:
   - spyder-kernels=2.1.3=py39h06a4308_0
   - sqlite=3.38.5=hc218d9a_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - tenacity=8.0.1=py39h06a4308_0
   - testpath=0.6.0=py39h06a4308_0
   - text-unidecode=1.3=pyhd3eb1b0_0
   - textdistance=4.2.1=pyhd3eb1b0_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
   - three-merge=0.1.1=pyhd3eb1b0_0
   - tinycss=0.4=pyhd3eb1b0_1002
   - tk=8.6.12=h1ccaba5_0
@@ -215,14 +228,15 @@ dependencies:
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.5.2=ha4553b6_0
   - pip:
-    - joblib==1.1.0
-    - kneed==0.7.0
-    - llvmlite==0.38.1
-    - numba==0.55.2
-    - pynndescent==0.5.7
-    - scikit-learn==1.1.1
-    - threadpoolctl==3.1.0
-    - tqdm==4.64.0
-    - umap-learn==0.5.3
-prefix: /home/adrian/anaconda3/envs/umap
-
+      - gudhi==3.7.1
+      - kneed==0.7.0
+      - llvmlite==0.38.1
+      - numba==0.55.2
+      - opencv-python==4.6.0.66
+      - plotly==5.11.0
+      - pynndescent==0.5.7
+      - shapely==1.8.5.post1
+      - tenacity==8.1.0
+      - tqdm==4.64.0
+      - umap-learn==0.5.3
+prefix: /home/irene/anaconda3/envs/umap
